Nov 29, 2002

 * FIXED: MS-Windows tcp_read() not to wait for messages after we have
   seen FD_CLOSE. Holger Kanwischer.

 * ADDED: Make library(socket) suitable for multi-threaded operation in
   MS-Windows. Mike Elston.

Nov 26, 2002

 * ADDED: Make library(time) suitable for multi-threaded operation.

 * ADDED: library(rlimit) for accessing POSIX process limits

Jul 24, 2002

 * ADDED: tcp_setopt(Socket, dispatch(false))

Jun 20, 2002

 * FIXED: Handle WSAEWOULDBLOCK in tcp_acept() to get a blocking accept
   call.

Jun 11, 2002

 * ADDED: library(files), providing uncommon access to file objects.

29/04/2002
  
 * Add initialization to load_foreign_library for calls lacking this.
   Holger Kanwischer.

28/03/2002

 * Record position on socket-streams (SIO_RECORDPOS).

 * Many changes to library(socket): fixes for the Windows implementation,
   dispatch events during tcp_read() while waiting for input.

01/02/2002

 * Modified copyright for compatibility with the now LGPL SWI-Prolog system

07/12/2001

 * FIXED: memory_file_to_atom/2 and friends to return size 0, empty atom
   when the file contains no data.

10/06/2001
 
 * ADDED: library(mime) for MIME message parsing.

07/10/2000
 
 * ADDED: Allow for descriptor to arguments of dup/2.

30/06/1999

 * ADDED: cgi.pl, cgi.c and form.[ch] providing cgi_get_form/1 to get the
   Form-data if SWI-Prolog is installed as a CGI script.

06/04/1999

 * Renamed the predicates from the socket package to tcp_<their-old-name>.
   These predicates are meant as low-level primitives and their normal name
   is too general.